--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "@slidev/cli": "^0.48.1",
+    "@slidev/theme-apple-basic": "^0.25.0",
+    "@slidev/theme-bricks": "^0.25.0",
     "@slidev/theme-default": "latest",
     "@slidev/theme-seriph": "latest",
+    "@slidev/theme-shibainu": "^0.25.0",
     "vue": "^3.4.21"
   }
 }
